--- a/css/style.css
+++ b/css/style.css
@@ -57,6 +57,7 @@ section > div {
 
 .free:hover {
   background: #babfbb;
+  cursor: pointer;
 }
 
 .p-two {
@@ -67,10 +68,19 @@ section > div {
   background: #5e3df8;
 }
 
+.highlight {
+  box-shadow: 2px 4px 4px rgba(0,0,0,0.5);
+  border-radius: 50%;
+  width: 80%;
+  height: 80%;
+  text-align: center;
+  margin: auto auto;
+  transition: 1s all;
+}
+
 .controls {
   box-sizing: border-box;
   margin: 2vh auto;
-  /* padding: 0 2vw; */
   max-width: 600px;
   width: 96vw;
   display: flex;
@@ -105,9 +115,16 @@ section > div {
 
 .reset-pop {
   display: none;
-  height: 100px;
-  width: 100px;
-  margin: 0 auto;
+  position: fixed;
+  top: calc(50% - 70px);
+  left: 50%;
+  padding: 20px;
+  text-align: center;
+  background: #babfbb;
+  box-shadow: 2px 3px 3px rgba(0,0,0,0.2);
+  transform: translate(-50%, -50%);
+  border-radius: 5px;
+  transition: 1s display;
 }
 
 .log {
