--- a/css/style.css
+++ b/css/style.css
@@ -17,15 +17,17 @@ main {
   flex-flow: column;
 }
 header {
-  width: 100%;
-  margin: 2vh auto 0;
+  width: 96vw;
+  max-width: 600px;
+  box-sizing: border-box;
+  margin: 0 auto;
+  display:  flex;
+  align-items: center;
+  justify-content: space-between;
+  flex: 2;
 }
-header > * {
-  text-align: center;
-  margin:  0 auto;
-}
+
 input.name {
-  /* display: inline-block !important; */
   margin-bottom: 0;
   box-sizing: border-box;
   flex-shrink: 2;
@@ -71,10 +73,6 @@ section > div {
 .highlight {
   box-shadow: 2px 4px 4px rgba(0,0,0,0.5);
   border-radius: 50%;
-  width: 80%;
-  height: 80%;
-  text-align: center;
-  margin: auto auto;
   transition: 1s all;
 }
 
@@ -84,6 +82,7 @@ section > div {
   max-width: 600px;
   width: 96vw;
   display: flex;
+  flex: 1.5;
   justify-content: space-between;
   align-items: center;
 }
@@ -113,14 +112,14 @@ section > div {
   text-align: center;
 }
 
-.reset-pop {
+.pop {
   display: none;
   position: fixed;
   top: calc(50% - 70px);
   left: 50%;
   padding: 20px;
   text-align: center;
-  background: #babfbb;
+  background: #ffffff;
   box-shadow: 2px 3px 3px rgba(0,0,0,0.2);
   transform: translate(-50%, -50%);
   border-radius: 5px;
@@ -128,22 +127,33 @@ section > div {
 }
 
 .log {
-  flex: 2;
+  align-self: end;
   display: flex;
   flex-flow: column;
-  height: 100%;
+  height: 23px;
   width: 100%;
   background: #333232;
   box-shadow: inset 0 8px 6px -6px rgba(0,0,0,0.8);
 }
-.log > article {
-  overflow-y: scroll;
-  flex: 2;
+.log p {
+  color: #edede1;
+  letter-spacing: 1.5px;
   margin: 0 auto;
   width: 100%;
   max-width: 600px;
   padding: 0 2vw;
+  font-size: 1.05em;
+  cursor: pointer;
+  border-bottom: 1px solid #3d3d3d;
+}
+.log > article {
+  overflow-y: scroll;
+  flex: 2;
   color: #edede1;
+  margin: 0 auto;
+  width: 100%;
+  max-width: 600px;
+  padding: 0 2vw;
   font-family: monospace;
   font-size:  0.9em;
   line-height: 1.4;
