--- a/css/style.css
+++ b/css/style.css
@@ -49,14 +49,15 @@ section {
   max-height: 600px;
   height: 96vw;
   margin: 0 auto;
+  border-radius: 10px;
 }
 section > div {
-  background: #8b8b8b;
+  background: #babebf;
   transition: 0.2s background;
 }
 
 .free:hover {
-  background: #babebf;
+  background: #888;
   cursor: pointer;
 }
 
@@ -71,7 +72,7 @@ section > div {
 .highlight {
   box-shadow: 2px 4px 4px rgba(0,0,0,0.5);
   border-radius: 50%;
-  transition: 1s all;
+  transition: 0.5s all;
 }
 
 .controls {
@@ -97,8 +98,8 @@ section > div {
 
 #controls > * {
   display: inline-block;
-  width: 33%;
-  box-sizing: border-box;
+  /* width: 33%; */
+  /* box-sizing: border-box; */
 }
 .board-size button {
   padding: 10px 15px;
@@ -107,7 +108,7 @@ section > div {
   margin-right: 0;
 }
 .board-size > div {
-  text-align: center;
+  text-align: right;
 }
 
 .pop {
