--- a/css/style.css
+++ b/css/style.css
@@ -13,6 +13,10 @@ main {
   flex-flow: column;
   background: #fffdf5;
 }
+.first-panel {
+  display: flex;
+  flex-flow: column;
+}
 header {
   width: 96vw;
   max-width: 600px;
@@ -41,6 +45,7 @@ input:last-child {
 }
 section {
   display: grid;
+  box-sizing: border-box;
   grid-template: repeat(3, 1fr) /repeat(3, 1fr);
   grid-gap: 1vw;
   max-width: 600px;
@@ -48,7 +53,6 @@ section {
   max-height: 600px;
   height: 96vw;
   margin: 0 auto;
-  border-radius: 10px;
 }
 section > div {
   background: #babebf;
@@ -97,8 +101,6 @@ section > div {
 
 #controls > * {
   display: inline-block;
-  /* width: 33%; */
-  /* box-sizing: border-box; */
 }
 .board-size button {
   padding: 10px 15px;
@@ -155,4 +157,49 @@ section > div {
 
 h1, h2, h3, div, p, button {
   color: #222;
+}
+
+@media (max-height: 800px) and (orientation: landscape) {
+  main {
+    flex-flow: row;
+  }
+  
+  .first-panel {
+    width: 30%;
+    padding: 4vh;
+    box-sizing: border-box;
+  }
+  header {
+    flex-flow: column;
+    box-sizing: border-box;
+    justify-content: center;
+    align-items: flex-start;
+    width: 100%;
+    height: 50%;
+  }
+  .controls {
+    flex-flow: column;
+    width: 100%;
+    margin: 0;
+  }
+
+  section {
+    width: 96vh;
+    height: 96vh;
+    margin: auto;
+  }
+
+  input.name {
+    width:auto;
+    max-width: 100%;
+    margin: 0;
+  }
+
+  #controls {
+    padding: 4vh;
+  }
+
+  #controls button {
+    margin: 0;
+  }
 }
