--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,8 @@ body {
 
 main {
   height: 100vh;
+  width: 100vw;
+  box-sizing: border-box;
   display: flex;
   flex-flow: column;
   background: #fffdf5;
@@ -16,17 +18,26 @@ main {
 .first-panel {
   display: flex;
   flex-flow: column;
+  justify-content: space-between;
 }
 header {
   width: 96vw;
   max-width: 600px;
   box-sizing: border-box;
-  margin: 0 auto;
+  margin: 2vh auto 0;
   display:  flex;
   align-items: center;
   justify-content: space-between;
   flex: 2;
 }
+header > div > * {
+  margin: 0;
+}
+header > div > div {
+  text-align: right;
+  padding: 1vh 0;
+}
+
 
 input.name {
   margin-bottom: 0;
@@ -84,7 +95,6 @@ section > div {
   max-width: 600px;
   width: 96vw;
   display: flex;
-  flex: 1.5;
   justify-content: space-between;
   align-items: center;
 }
@@ -113,9 +123,9 @@ section > div {
 }
 
 .pop {
-  display: none;
+  /* display: none; */
   position: fixed;
-  top: calc(50% - 70px);
+  top: calc(50%);
   left: 50%;
   padding: 20px;
   text-align: center;
@@ -125,81 +135,68 @@ section > div {
   border-radius: 5px;
 }
 
-.log {
-  align-self: end;
-  display: flex;
-  flex-flow: column;
-  height: 23px;
-  width: 100%;
-  background: #333232;
-  box-shadow: inset 0 8px 6px -6px rgba(0,0,0,0.8);
-}
-.log > * {
-  color: #edede1;
-  margin: 0 auto;
-  width: 100%;
-  max-width: 600px;
-  padding: 0 2vw;
+#help-pop p, #help-pop ul{
+  text-align: left;
 }
 
-.log p {
-  font-size: 1.05em;
-  cursor: pointer;
-  border-bottom: 1px solid #3d3d3d;
-  letter-spacing: 1.5px;
-}
-.log article {
-  overflow-y: scroll;
-  flex: 2;
-  font-family: monospace;
-  line-height: 1.4;
-}
 
 h1, h2, h3, div, p, button {
   color: #222;
 }
 
-@media (max-height: 800px) and (orientation: landscape) {
+@media (max-width: 640px) {
+  #help-pop {
+    width: 80vw;
+  }
+}
+
+@media (max-height: 870px) and (orientation: landscape) {
   main {
     flex-flow: row;
   }
-  
+
   .first-panel {
-    width: 30%;
-    padding: 4vh;
+    margin: auto 4vh;
     box-sizing: border-box;
+    height: 92vh;
+    flex: 2;
   }
   header {
     flex-flow: column;
     box-sizing: border-box;
-    justify-content: center;
-    align-items: flex-start;
+    justify-content: flex-start;
     width: 100%;
-    height: 50%;
+    flex: 0;
+    margin: 2vh auto;
+    align-items: flex-start;
   }
   .controls {
     flex-flow: column;
     width: 100%;
     margin: 0;
+    flex: 1;
+    justify-content: space-evenly;
   }
 
   section {
     width: 96vh;
     height: 96vh;
     margin: auto;
+    grid-gap: 1vh;
+    flex-shrink: 0;
   }
 
   input.name {
-    width:auto;
+    width: inherit;
     max-width: 100%;
     margin: 0;
   }
 
   #controls {
-    padding: 4vh;
+    margin: 4vh;
+    flex: 1.5;
   }
-
-  #controls button {
-    margin: 0;
+  #help-pop {
+    width: 95vw;
   }
 }
