--- a/css/style.css
+++ b/css/style.css
@@ -1,202 +1,241 @@
 body {
-  margin: 0;
-  padding: 0;
-  font-size: 16px;
-  height: 100vh;
-  width: 100vw;
-  max-width: 100vw;
+ margin: 0;
+ padding: 0;
+ font-size: 16px;
+ height: 100vh;
+ width: 100vw;
+ /* max-width: 100vw; */
 }
 
 main {
-  height: 100vh;
-  width: 100vw;
-  box-sizing: border-box;
-  display: flex;
-  flex-flow: column;
-  background: #fffdf5;
+ height: 100vh;
+ width: 100vw;
+ box-sizing: border-box;
+ display: flex;
+ flex-flow: column;
+ background: #fffdf5;
 }
 .first-panel {
-  display: flex;
-  flex-flow: column;
-  justify-content: space-between;
+ display: flex;
+ flex-flow: column;
+ justify-content: space-between;
 }
 header {
-  width: 96vw;
-  max-width: 600px;
-  box-sizing: border-box;
-  margin: 2vh auto 0;
-  display:  flex;
-  align-items: center;
-  justify-content: space-between;
-  flex: 2;
+ width: 96vw;
+ max-width: 600px;
+ box-sizing: border-box;
+ margin: 2vh auto 0;
+ display: flex;
+ align-items: center;
+ justify-content: space-between;
+ flex: 2;
 }
 header > div > * {
-  margin: 0;
-}
-header > div > div {
-  text-align: right;
-  padding: 1vh 0;
+ margin: 0;
 }
 
+header h1 {
+ margin: 0;
+}
+
+header > div > div {
+ text-align: right;
+ display: inline-block;
+}
+.help-ai-container {
+ display: flex;
+ padding: 1vh 0;
+ flex-direction: row;
+ justify-content: space-between;
+}
+label.name {
+ margin-bottom: 0;
+ box-sizing: border-box;
+ flex-shrink: 2;
+ max-width: 40%;
+}
+label.name span {
+ font-size: 0.8em;
+ padding-left: 10px;
+}
+
+a#instructions {
+ margin-right: 10px;
+}
+.p1 {
+ color: #5e3df8;
+}
+.p2 {
+ color: #db5240;
+}
+label.name:last-child,
+input.name:last-child {
+ margin-right: 0;
+}
 
 input.name {
-  margin-bottom: 0;
-  box-sizing: border-box;
-  flex-shrink: 2;
-  max-width: 40%;
-}
-input:last-child {
-  margin-right: 0;
+ width: 100%;
+ box-sizing: border-box;
+ margin-top: 6px;
 }
 
 .players p {
-  display: inline-block;
-  font-size: 1.2em;
-  margin: 0 6px 0 0;
+ display: inline-block;
+ font-size: 1.2em;
+ margin: 0 6px 0 0;
 }
 section {
-  display: grid;
-  box-sizing: border-box;
-  grid-template: repeat(3, 1fr) /repeat(3, 1fr);
-  grid-gap: 1vw;
-  max-width: 600px;
-  width: 96vw;
-  max-height: 600px;
-  height: 96vw;
-  margin: 0 auto;
+ display: grid;
+ box-sizing: border-box;
+ grid-template: repeat(3, 1fr) / repeat(3, 1fr);
+ grid-gap: 1vw;
+ max-width: 600px;
+ width: 96vw;
+ max-height: 600px;
+ height: 96vw;
+ margin: 0 auto;
 }
 section > div {
-  background: #babebf;
-  transition: 0.2s background;
+ background: #babebf;
+ transition: 0.2s background;
 }
 
 .free:hover {
-  background: #888;
-  cursor: pointer;
+ background: #888;
+ cursor: pointer;
 }
 
 .p-two {
-  background: #db5240;
+ background: #db5240;
 }
 
 .p-one {
-  background: #5e3df8;
+ background: #5e3df8;
 }
 
 .highlight {
-  box-shadow: 2px 4px 4px rgba(0,0,0,0.5);
-  border-radius: 50%;
-  transition: 0.5s all;
+ box-shadow: 2px 4px 4px rgba(0, 0, 0, 0.5);
+ border-radius: 50%;
+ transition: 0.5s all;
 }
 
 .controls {
-  box-sizing: border-box;
-  margin: 2vh auto;
-  max-width: 600px;
-  width: 96vw;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
+ box-sizing: border-box;
+ margin: 2vh auto;
+ max-width: 600px;
+ width: 96vw;
+ display: flex;
+ justify-content: space-between;
+ align-items: center;
 }
-.current p, .board-size p {
-  margin: 0;
-  text-align: center;
+.current p,
+.board-size p {
+ margin: 0;
+ text-align: center;
 }
 .current p:first-child {
-  font-size: 0.8em;
+ font-size: 0.8em;
 }
 .current p:last-child {
-  font-size: 1.3em;
+ font-size: 1.3em;
 }
 
 #controls > * {
-  display: inline-block;
+ display: inline-block;
 }
 .board-size button {
-  padding: 10px 15px;
+ padding: 10px 15px;
 }
 .board-size button:last-child {
-  margin-right: 0;
+ margin-right: 0;
 }
 .board-size > div {
-  text-align: right;
+ text-align: right;
 }
 
 .pop {
-  display: none; 
-  position: fixed;
-  top: calc(50%);
-  left: 50%;
-  padding: 20px;
-  text-align: center;
-  background: #ffffff;
-  box-shadow: 2px 3px 3px rgba(0,0,0,0.2);
-  transform: translate(-50%, -50%);
-  border-radius: 5px;
+ display: none;
+ position: fixed;
+ top: calc(50%);
+ left: 50%;
+ padding: 20px;
+ text-align: center;
+ background: #ffffff;
+ box-shadow: 2px 3px 3px rgba(0, 0, 0, 0.2);
+ transform: translate(-50%, -50%);
+ border-radius: 5px;
 }
 
-#help-pop p, #help-pop ul{
-  text-align: left;
+#help-pop p,
+#help-pop ul {
+ text-align: left;
 }
 
-
-h1, h2, h3, div, p, button {
-  color: #222;
+h1,
+h2,
+h3,
+div,
+p,
+button {
+ color: #222;
 }
 
 @media (max-width: 640px) {
-  #help-pop {
-    width: 80vw;
-  }
+ #help-pop {
+  width: 80vw;
+ }
 }
 
 @media (max-height: 870px) and (orientation: landscape) {
-  main {
-    flex-flow: row;
-  }
+ main {
+  flex-flow: row;
+ }
 
-  .first-panel {
-    margin: auto 4vh;
-    box-sizing: border-box;
-    height: 92vh;
-    flex: 2;
-  }
-  header {
-    flex-flow: column;
-    box-sizing: border-box;
-    justify-content: flex-start;
-    width: 100%;
-    flex: 0;
-    margin: 2vh auto;
-    align-items: flex-start;
-  }
-  .controls {
-    flex-flow: column;
-    width: 100%;
-    margin: 0;
-    flex: 1;
-    justify-content: space-evenly;
-  }
+ .first-panel {
+  margin: auto 4vh;
+  box-sizing: border-box;
+  height: 92vh;
+  flex: 2;
+ }
+ header {
+  flex-flow: column;
+  box-sizing: border-box;
+  justify-content: flex-start;
+  width: 100%;
+  flex: 0;
+  margin: 2vh auto;
+  align-items: flex-start;
+ }
+ .controls {
+  flex-flow: column;
+  width: 100%;
+  margin: 0;
+  flex: 1;
+  justify-content: space-evenly;
+ }
 
-  section {
-    width: 96vh;
-    height: 96vh;
-    margin: auto;
-    grid-gap: 1vh;
-    flex-shrink: 0;
-  }
+ section {
+  width: 96vh;
+  height: 96vh;
+  margin: auto;
+  grid-gap: 1vh;
+  flex-shrink: 0;
+ }
 
-  input.name {
-    width: inherit;
-    max-width: 100%;
-    margin: 0;
-  }
+ label.name {
+  width: inherit;
+  max-width: 100%;
+  margin: 0;
+ }
+ .help-ai-container {
+  width: 100%;
+ }
 
-  #controls {
-    margin: 4vh;
-    flex: 1.5;
-  }
-  #help-pop {
-    width: 95vw;
-  }
+ #controls {
+  margin: 4vh;
+  flex: 1.5;
+ }
+ #help-pop {
+  width: 95vw;
+ }
 }
