improved contrast of p2 label

--- a/css/style.css
+++ b/css/style.css
@@ -66,7 +66,7 @@ a#instructions {
  color: #5e3df8;
 }
 .p2 {
- color: #db5240;
+ color: #ae1602;
 }
 label.name:last-child,
 input.name:last-child {
